# train_detector

./: .editorconfig  .gitignore  LICENSE  README.md  Train_stats.ipynb  main.py  pyproject.toml
.github/workflows/: test.yml
docs/: examples.md
src/: config.py  stats.py  tg.py  train_detector.py
tests/integration/: test_integration.py
tests/unit/: conftest.py  test_telegram_bot.py  test_train_detector.py
